form validation fix;

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -3,13 +3,13 @@ html(lang="en")
     include layout/head.pug
     body
         //PRELOADER START
-        .preloader
-            .wrap
-                .icon
-                    svg.logo
-                        use(xlink:href="images/main-page_icons-sprite.svg#preloder_logo")
-                    span.logo__top
-                    span.logo__bottom
+        //- .preloader
+        //-     .wrap
+        //-         .icon
+        //-             svg.logo
+        //-                 use(xlink:href="images/main-page_icons-sprite.svg#preloder_logo")
+        //-             span.logo__top
+        //-             span.logo__bottom
         //PRELOADER END
         //POPUP START
         include layout/info.pug
