--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -50,6 +50,7 @@
                         <input type="submit" value="Хочу быть в курсе!" class="wpcf7-form-control wpcf7-submit btn">
                         <span class="ajax-loader"></span>
                         //-<div class="wpcf7-response-output wpcf7-display-none wpcf7-validation-errors" style="display: block;" role="alert">Одно или несколько полей содержат ошибочные данные. Пожалуйста, проверьте их и попробуйте ещё раз.</div>
+                        <div class="wpcf7-response-output wpcf7-display-none wpcf7-mail-sent-ok" aria-hidden="true" style="" role="alert">Спасибо за Ваше сообщение. Оно успешно отправлено.</div>
                     </form>
                 </div>
             </div>        
