--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -52,13 +52,14 @@
                             </span>
                         </span>
                         <div class="contact-form__link">политике конфиденциальности</div>
-                        <div class="contact-form__custom-check active__check"></div>
-                        <div class="contact-form__custom-icon" style="display: block;"></div>
+                        //<div class="contact-form__custom-check active__check"></div>
+                        //<div class="contact-form__custom-icon" style="display: block;"></div>
                     </div>
                     <input type="submit" value="Отправить запрос" class="wpcf7-form-control wpcf7-submit">
                     <span class="ajax-loader">
                         </span><div class="wpcf7-response-output wpcf7-display-none">
                     </div>
+                    <div class="wpcf7-response-output wpcf7-display-none wpcf7-mail-sent-ok" aria-hidden="true" role="alert">Спасибо за Ваше сообщение. Оно успешно отправлено.</div>
                 </form>
             </div>
     </div>
