--- a/app/scss/modules/_modal.scss
+++ b/app/scss/modules/_modal.scss
@@ -120,6 +120,9 @@
     .contact-form__field {
         padding: 0;
     }
+    .modal__field--red {
+        border-color: #EB5757 !important;
+    }
     // &__form {
     //     margin: 0 auto;
     //     background: $light-bg;
