--- a/app/scss/modules/_page-apartments.scss
+++ b/app/scss/modules/_page-apartments.scss
@@ -31,6 +31,12 @@
     }
 }
 
+.apartments-body {
+    section {
+        background: #F5F5F4;
+    }
+}
+
 .apartments-list {
     .arrow-btn {
         color: #423C3A;
