--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -287,3 +287,29 @@ footer {
         padding-left: 0;
     }
 }
+
+.custom-checkbox {
+    cursor: pointer;
+    @include pos($t: 50%, $l: -30px);
+    @include size(20px);
+    transform: translateY(-50%);
+    background: #FFFFFF;
+    border: 1px solid #828282;
+    border-radius: 3px;
+    transition: all .3s;
+    z-index: 2;
+    &__icon {
+        display: block;
+        @include pos($t: 50%, $l: -22px);
+        border: solid #828282;
+        border-width: 0 3px 3px 0;
+        @include size(5px, 10px);
+        transform: translateY(-50%) rotate(45deg);
+        z-index: 3;
+        pointer-events: none;
+    }
+}
+
+.active__check {
+    background: $link-pressed;
+}
