--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -49,7 +49,6 @@
     }
     .information {
         grid-row: 1/3;
-        min-height: 500px;
         &__headline {
             padding: 0;
             margin: 0 0 1rem 0;
@@ -60,6 +59,7 @@
             line-height: 29px;
         }
         @media (min-width: 1025px) {
+            min-height: 500px;
             margin: 40px 125px 40px 70px;
             &__headline {
                 font-family: Century Gothic;
@@ -156,8 +156,7 @@
         background-size: cover;
         &:hover {
             img {
-                transform: translateX(-50%) translateY(50%) scale(1.1);
-                //width: 110%;
+                transform: translateX(-50%) scale(1.1);
                 box-shadow: inset 14px 3px 170px -82px rgba(0, 0, 0, 0.75);
             }
         }
@@ -169,14 +168,16 @@
             margin: 0;
         }
         .img {
-            @include size(100%,
-            auto);
+            min-width: 100%;
+            width: auto;
+            height: 100%;
             transition: all 1s cubic-bezier(.04, .5, .68, 1.04);
+            @include pos($b: 0, $l: 50%);
+            transform: translateX(-50%);
             @media (min-width: 1025px) {
-                @include pos($b: 50%, $l: 50%);
-                transform: translateX(-50%) translateY(50%);
-                @include size(152%,
-                auto);
+                //transform: translateX(-50%) translateY(50%);
+                // @include size(152%,
+                // auto);
             }
         }
     }
