--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -103,6 +103,9 @@
                 width: 50%;
                 //left: 50%;
                 //transform: translateX(-50%);
+                &:after {
+                    display: none;
+                }
             }
             @media (min-width: 1024px) {
                 transform: translateX(0);
@@ -122,11 +125,13 @@
     }
     &-tile {
         margin: 0 .25rem;
-        background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
+        background: #423c3a;
+        //background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
         text-align: center;
         color: $tw;
         display: grid !important;
         min-width: 196px;
+        //justify-content: center;
         overflow: hidden;
         @media (min-width: 1024px) {
             min-height: 888px;
@@ -137,12 +142,12 @@
             padding: 25px 0 0;
             grid-row: 1/2;
             grid-column: 1/13;
+            width: inherit;
             @media (min-width: 1024px) {
                 padding: 25px 0;
                 font-size: 36px;
                 line-height: 44px;
                 height: 100px;
-                justify-self: center;
                 align-self: center;
             }
         }
@@ -168,9 +173,9 @@
             //     margin: 15px;
             // }
             img {
-                min-height: 100%;
                 width: auto;
                 min-width: 100%;
+                height: 100%;
                 @media (max-width: 576px) {
                     min-height: calc(100% - 30px);
                     width: calc(100% - 30px);
@@ -187,6 +192,7 @@
             grid-row: 3/4;
             grid-column: 1/13;
             margin: 50px 0;
+            width: inherit;
             @media (max-width: 576px) {
                 margin: 15px 0;
             }
@@ -205,6 +211,7 @@
             padding: 0 .25rem;
             grid-row: 4/5;
             grid-column: 1/13;
+            width: inherit;
             @media (max-width: 576px) {
                 font-size: 24px;
                 line-height: 29px;
@@ -229,8 +236,9 @@
             text-align: center;
             padding: 0 1.25rem;
             display: block;
+            width: inherit;
         }
-        @media (max-width: 1366px) {
+        @media (max-width: 1500px) {
             &__name {
                 font-size: 24px;
             }
