--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -199,5 +199,6 @@
     line-height: 50px;
     height: 50px;
     align-self: flex-end;
-    padding: 0 1rem;
+    text-align: center;
+    //padding: 0 1rem;
 }
